--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "postinstall": "bower install"
   },
   "devDependencies": {
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
     "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "^3.1.0",
